package/objects/Episode__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Episode_Name__c</fullName>
        <inlineHelpText>The name of episode</inlineHelpText>
        <label>Episode Name</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Season__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Season</label>
        <referenceTo>Season__c</referenceTo>
        <relationshipLabel>Episodes</relationshipLabel>
        <relationshipName>Episodes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TV_Serie__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TV Serie</label>
        <referenceTo>TV_Serie__c</referenceTo>
        <relationshipLabel>Episodes</relationshipLabel>
        <relationshipName>Episodes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Episode</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Episode-{0000}</displayFormat>
        <label>Episode Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Episodes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>